# cov_tuned_diffusion

./: .gitignore  LICENSE  README.md  fix_paths.py  measure_gflops.py  pyproject.toml  requirements.txt  sample_score.py  sample_score_aldp.py  score_ode_test.py  score_test.py  score_training.py  training_utils.py
examples/gmm/: README.md  compute_ess.py  gmm.py  plot_ess.py  plot_gmm_hist.py  plot_var.py  score_model.py  score_test.py  training.py  tune_params_score.py
examples/molecules/: README.md  measure_gflops.py  sample_score.py  score_ode_test.py  score_test.py  score_training.py
examples/molecules/cov_tuning/: schedules.py  utils.py
gmm2_experiments/: compute_ess.py  plot_ess.py  plot_gmm_hist.py  plot_var.py  score_model.py  score_test.py  training.py  tune_params_score.py  utils.py
model/: __init__.py  diffusion.py  utils.py
model/configs/: aldp_egnn_config.yaml
plotting/: plot_ess.py  plot_ess_score.py  plot_klalpha_ess.py  plot_ramachandran.py  plot_reweighted_hist.py  plot_var.py
src/: __init__.py
src/analysis/plotting/: plot_ess.py  plot_ess_score.py  plot_klalpha_ess.py  plot_ramachandran.py  (+1 more)
src/configs/: dw4_egnn_config.yaml  lj13_egnn_config.yaml
src/cov_tuned_diffusion/: __init__.py
src/data/: datasets.py
src/models/: __init__.py  score_net.py
src/utils/: __init__.py  path_config.py
target_dist/: __init__.py  aldp_target.py  aldp_utils.py  lennardjones_energy.py  multi_double_well_energy.py
tune_var/: params_tuning_score.py  params_tuning_score_full.py  params_tuning_score_full_aldp.py
utils/: __init__.py  path_config.py
(+8 files in other folders)
